--- a/README
+++ b/README
@@ -1,13 +1,30 @@
 # lein-reload
 
-FIXME: write description
+Leininge plugin to reload namespaces in modified files
 
 ## Usage
 
-FIXME: write
+Add `[lein-reload "1.0.0-SNAPSHOT"]` to your `dev-dependencies` in
+`project.clj`.
+
+Start an interactive leiningen session
+
+    lein interactive
+
+test your code inside the leiningen shell
+
+    lein> test
+
+code to make it work, then reload and re-test
+
+    lein> reload
+    lein> test
+
+reload will be fast, since it will only reload the files you modified
+since last time.
 
 ## License
 
-Copyright (C) 2011 FIXME
+Copyright (C) 2011 Sebastián B. Galkin
 
 Distributed under the Eclipse Public License, the same as Clojure.
